Add more bind options
Added:
- lucid (9s)
- zero critical bind / shadow rain (4s)
- kanna bind + lucid which is a common combo

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       <button class="button1" onclick="bind(10)">
         <p>10 seconds</p>
       </button>
+      <button class="button1" onclick="bind(9)">
+        <p>Lucid</p>
+      </button>
+      <button class="button1" onclick="bind(4)">
+        <p>Zero</p>
+      </button>
+      <button class="button1" onclick="bind(24)">
+        <p>15 seconds + Lucid</p>
+      </button>
     </p>
     <p class="left" id="testBox" style="margin-left: 20px; margin-right: 20px;">
       Test: 
