--- a/index.html
+++ b/index.html
@@ -85,9 +85,12 @@
     <div class="systemdots" id="system2"></div>
     <div class="systemdots" id="system3"></div>
     <div class="systemdots" id="system4"></div>
+    <button id="cleanseSlimeButton" class="button2" onclick="slimeCancel()" style=" background-color:#ccc;">
+      <p>Cleanse slime</p>
+    </button>
     <button id="cleanseButton" class="button2" style=" background-color:#ccc;">
-      <p>Cleanse</p>
-    </button>  
+      <p>Cleanse other</p>
+    </button>
     <button class="button2" onclick="systemFailTimer(60); event.stopPropagation()">
       <p>Reset</p>
     </button>
