--- a/index.html
+++ b/index.html
@@ -51,20 +51,23 @@
         ▼ <!-- &#9660 -->
       </button>
     </span>
+    &nbsp;&nbsp;&nbsp;Bind settings:
+    <input type="checkbox" id="kannaBindToggle" name="kannaBind" checked>
+    <label for="kannaBind">Use kanna bind</label><br>
   </p>
   <p class="left" id="bindBox" style="margin-left: 20px; margin-right: 20px; font-size: 12px;">
     Bind
-    <button class="button1 bind" onclick="bind(15)" style="margin-left: 8px;">
-      <p>15 seconds</p>
+    <button class="button1 bind" onclick="bind(getRegBindTime())" style="margin-left: 8px;">
+      <p>Reg</p>
     </button>
-    <button class="button1 bind" onclick="bind(10)">
-      <p>10 seconds</p>
-    </button>
-    <button class="button1" onclick="bind(9)">
+    <button class="button1 bind" onclick="bind(9)">
       <p>Lucid</p>
     </button>
-    <button class="button1" onclick="bind(4)">
+    <button class="button1 bind" onclick="bind(4)">
       <p>Zero</p>
+    </button>
+    <button class="button1 bind" onclick="bind(getRegBindTime() + 9)">
+      <p>Reg + Lucid</p>
     </button>
   </p>
   <p class="left" id="testBox" style="margin-left: 20px; margin-right: 20px; font-size: 12px;">
