Align kanna bind checkbox to text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </button>
     </span>
     &nbsp;&nbsp;&nbsp;Bind settings:
-    <input type="checkbox" id="kannaBindToggle" name="kannaBind" checked>
+    <input type="checkbox" id="kannaBindToggle" name="kannaBind" checked style="vertical-align: -2px">
     <label for="kannaBind">Use kanna bind</label><br>
   </p>
   <p class="left" id="bindBox" style="margin-left: 20px; margin-right: 20px; font-size: 12px;">
